[package]
name = "fs-init"
version = "0.1.0"
edition = "2021"
description = "FreeSynergy Init — bootstraps a node by cloning the official store"

[[bin]]
name = "fs-init"
path = "src/main.rs"

[dependencies]
fs-info = { path = "../fs-info" }
gix = { version = "0.80", default-features = false, features = ["blocking-http-transport-reqwest-rust-tls", "worktree-mutation"] }
clap = { version = "4", features = ["derive"] }
